--- a/style.css
+++ b/style.css
@@ -34,11 +34,27 @@ font-family: "Courier New";
 font-size: 14px;
 }
 
+
 #wrapper{
 	max-width:500px;
 	margin-right: auto;
 	margin-left: auto;
 	padding-right:10px;
 	padding-left:10px;
+}
+
+#p1{
+	text-indent:130;
+	text-align: left;
+	font-family:"Neue Helvetica";
+	font-size:14px;
+}
+
+.fa {
+	padding: 0px;
+	width:20px;
+	text-align:center;
+	text-decoration:none;
+	
 }
 
