--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@ border-radius: 40px;
 }
 
 h1 {
+margin-top: 20px;
+text-indent: 30px;
+text-align: left;
+font-family: "Courier New";
+font-size: 9px;
+}
+
+h2 {
 text-align: center;
 text-indent: 50;
 font-family: "Times New Roman";
@@ -34,14 +42,6 @@ font-family: "Courier New";
 font-size: 14px;
 }
 
-
-#wrapper{
-	max-width:500px;
-	margin-right: auto;
-	margin-left: auto;
-	padding-right:10px;
-	padding-left:10px;
-}
 
 #p1{
 	text-indent:130;
@@ -57,4 +57,3 @@ font-size: 14px;
 	text-decoration:none;
 	
 }
-
