--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ text-align: center;
 }
 
 #main_index{
-width: 1000px;
-height: 2500px;
+width: 1200px;
+height: 3000px;
 background: #ffffff;
 margin: 25px auto;
 border: solid 3px;
@@ -13,8 +13,8 @@ border-radius: 40px;
 }
 
 #main_discog{
-width: 1000px;
-height: 2100px;
+width: 1100px;
+height: 2300px;
 background: #ffffff;
 margin: 25px auto;
 border: solid 2px;
@@ -26,20 +26,28 @@ margin-top: 20px;
 text-indent: 30px;
 text-align: left;
 font-family: "Courier New";
-font-size: 9px;
+font-size: 11px;
 }
 
 h2 {
 text-align: center;
 text-indent: 50;
 font-family: "Times New Roman";
-font: 30pt;
+font: 50pt;
 }
 
 p {
 text-align: center;
 font-family: "Courier New";
-font-size: 14px;
+font-size: 20px;
+}
+
+h3 {
+font-size: 25pt;
+}
+
+h4 {
+font-size: 20pt;
 }
 
 
@@ -56,4 +64,13 @@ font-size: 14px;
 	text-align:center;
 	text-decoration:none;
 	
+}
+
+
+.album_cover_index {
+    width: 300;
+    text-indent: 450;
+}
+.album_cover_index:hover {
+    box-shadow: 450px 12px 16px 0 rgba(0,0,0,0.24)
 }
