--- a/style.css
+++ b/style.css
@@ -21,6 +21,16 @@ border: solid 2px;
 border-radius: 40px;
 }
 
+#email_index{
+width:1200px;
+height:500px;
+background: #ffffff;
+margin: 25px auto;
+border: solid 3px;
+border-radius: 40px;
+    
+}
+
 h1 {
 margin-top: 20px;
 text-indent: 30px;
