--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ text-align: center;
 }
 
 #main_index{
-width: 80%;
-height: 95%;
+width: 90%;
+height: 3000px;
 background: #ffffff;
 margin: 25px auto;
 border: solid 3px;
@@ -13,7 +13,7 @@ border-radius: 40px;
 }
 
 #main_discog{
-width: 1100px;
+width: 85%;
 height: 2300px;
 background: #ffffff;
 margin: 25px auto;
@@ -79,8 +79,10 @@ font-size: 20pt;
 
 .album_cover_index {
     width: 300;
-    text-indent: 450;
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
 }
 .album_cover_index:hover {
-    box-shadow: 450px 12px 16px 0 rgba(0,0,0,0.24)
+    box-shadow: 10px 12px 16px 0 rgba(0,0,0,0.24)
 }
