--- a/iphone.css
+++ b/iphone.css
@@ -5,7 +5,7 @@ text-align: center;
 
 #main_index{
 width: 99%;
-height: 4000px;
+height: 2500px;
 background: #ffffff;
 margin: auto;
 border: solid 3px;
@@ -35,7 +35,7 @@ border-radius: 40px;
 h1 {
 margin-top: 20px;
 text-indent: 30px;
-text-align: left;
+text-align: center;
 font-family: "Courier New";
 font-size: 11px;
 }
@@ -80,8 +80,8 @@ font-size: 20pt;
 
 .album_cover_index {
     width: 200;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left:none;
+    margin-right:none;
     display:block;
 }
 .album_cover_index:hover {
