--- a/iphone.css
+++ b/iphone.css
@@ -14,10 +14,10 @@ min-width:480px;
 }
 
 #main_discog{
-width: 85%;
-height: 2300px;
+width: 98%;
+height: 2400px;
 background: #ffffff;
-margin: 25px auto;
+margin: auto;
 border: solid 2px;
 border-radius: 40px;
 }
