--- a/iphone.css
+++ b/iphone.css
@@ -5,7 +5,7 @@ text-align: center;
 
 #main_index{
 width: 99%;
-height: 2500px;
+height: 3000px;
 background: #ffffff;
 margin: auto;
 border: solid 3px;
@@ -82,6 +82,7 @@ font-size: 20pt;
     width: 200;
     margin-left:auto;
     margin-right:auto;
+    text-indent: -15px;
     display:block;
 }
 .album_cover_index:hover {
