--- a/iphone.css
+++ b/iphone.css
@@ -20,16 +20,7 @@ background: #ffffff;
 margin: auto;
 border: solid 2px;
 border-radius: 40px;
-}
-
-#email_index{
-width:1200px;
-height:500px;
-background: #ffffff;
-margin: 25px auto;
-border: solid 3px;
-border-radius: 40px;
-    
+min-width:480px;
 }
 
 h1 {
