--- a/style.css
+++ b/style.css
@@ -34,15 +34,15 @@ border-radius: 40px;
 
 h1 {
 margin-top: 20px;
-text-indent: 30px;
-text-align: left;
+text-indent: 1px;
+text-align: center;
 font-family: "Courier New";
 font-size: 11px;
 }
 
 h2 {
 text-align: center;
-text-indent: 50;
+text-indent: 30;
 font-family: "Times New Roman";
 font: 50pt;
 }
